# wasm-type-prediction

./: LICENSE  README.md
data/: .gitignore  README  binaries.7z.link  common-names.txt  dataset.7z.link
implementation/1-collection/: cheatsheet  packages.list  run-parallel.sh  sources-compile.py  stats.sh  utils.py
implementation/2-extraction/: Cargo.toml  build.rs  rustfmt.toml
implementation/2-extraction/src/: main.rs  options.rs
implementation/2-extraction/src/dwarf/: mod.rs  parse.rs  util.rs
implementation/2-extraction/src/samples/: extract.rs  mod.rs  sample.rs  wasm_repr.rs
implementation/2-extraction/src/samples/types/: mod.rs  parse.rs
implementation/2-extraction/src/util/: cmultimap.rs  file_error.rs  frequencies.rs  handle_errors.rs  human_gnu_format.rs  into_seq_iter.rs  mod.rs  percent.rs  progress_bar_log.rs  sample_writer.rs
implementation/2-extraction/src/wasm/: binary_stats.rs  fmt.rs  magic_bytes.rs  mod.rs  parse.rs
implementation/3-scripts/: baseline-model-build.py  baseline-model-predict.py  entropy.py  evaluate-predictions.py  name-stats.ipynb  perfect-model-build.py  perfect-model-predict.py  samples-per-binary.py  samples-per-project.py  samples-per-wasm.py  samples-train-in-dev.py  simplifiy-types.py  simplifiy-wasm.py  split-dataset.py  stats-wasm.py  types-distribution.py
implementation/4-model/: notebook.sh  pyvenv.cfg  setup.sh
implementation/4-model/subword-model/: notebook.sh
models/seq2seq/: .gitignore  model-weights.7z.link
models/subword/wasm/: .gitignore  500.model  500.vocab  train.txt.7z.link
(+29 files in other folders)
