[package]
name = "extraction"
version = "0.1.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
description = "Extract training data (WebAssembly functions and type information) and statistics from a directory containing WebAssembly binaries."

edition = "2018"
exclude = ["testdata/", "out/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI application stuff: options, logging, errors, progress bar
clap = "3.0.0-beta.2"
log = "0.4.0"
# env_logger = "0.8.2"
simplelog = "0.9.0"
anyhow = "1.0.38"

# atty = "0.2.14"
# termcolor = "1.1.2"
chrono = "0.4.19"

indicatif = { version = "0.15.0", features = ["rayon"] }
walkdir = "2.3.1"
# glob = "0.3.0"

# DWARF and Wasm parsing
gimli = "0.21.0"
wasmparser = "0.75.0"

# Parallelization and concurrent datastructures
rayon = "1"
num_cpus = "1.13.0"
once_cell = "1.7.0"
chashmap = "2.2.2"
# parking_lot = "0.11.1"
# crossbeam-channel = "0.4.0"
# FIXME unsafe, only used for into_seq_iter(), replace long-term
thread-scoped = "1.0.2"

rand = "0.8.3"
regex = "1"
sha2 = "0.9.2"

itertools = "0.10.0"
# fallible-iterator = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# flate2 = "1.0"

[build-dependencies]
chrono = "0.4.19"

[profile.release]
lto = "thin"
incremental = true
overflow-checks = true
